--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
@@ -15,13 +18,28 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px);
   color: white;
+}
+
+h2 {
+  margin: 10px;
+  padding-left: 35px;
+}
+
+.magic-button {
+  font-size: 15px;
+  background-color: silver;
+  padding: 8px 32px;
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  margin-left: 42px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .App-link {
